--- a/MvcLearning/Views/Shop/Index.cshtml
+++ b/MvcLearning/Views/Shop/Index.cshtml
@@ -18,7 +18,9 @@
 			<p>Created : @Model.CreatedAt</p>
 		</div>
 
-		<a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete Shop</a>
+		<form asp-action="Delete" asp-route-id="@Model.Id" method="post">
+			<button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this shop?')">Delete Shop</button>
+		</form>
 
 	}
 	else
