--- a/MvcLearning/Views/Shop/Index.cshtml
+++ b/MvcLearning/Views/Shop/Index.cshtml
@@ -17,11 +17,24 @@
 			<p>@Model.Description</p>
 			<p>Created : @Model.CreatedAt</p>
 		</div>
-		<a asp-controller="Product" asp-action="Create" asp-route-userId="@Model.Id" class="btn btn-primary">Add Product</a>
+		<a asp-controller="Product" asp-action="Create" asp-route-shopId="@Model.Id" class="btn btn-primary">Add Product</a>
 		<form asp-action="Delete" asp-route-id="@Model.Id" method="post">
 			<button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this shop?')">Delete Shop</button>
 		</form>
-
+		@if (Model.Products is not null)
+		{
+			<div>
+				<h2>Products</h2>
+				<ul>
+					@foreach (var product in Model.Products)
+					{
+						<li>
+							<a asp-controller="Product" asp-action="Details" asp-route-id="@product.Id">@product.Name</a>
+						</li>
+					}
+				</ul>
+			</div>
+		}
 	}
 	else
 	{
