--- a/MvcLearning/Views/Product/Details.cshtml
+++ b/MvcLearning/Views/Product/Details.cshtml
@@ -30,6 +30,10 @@ else
             </form>
         }
             <a asp-action="Index" asp-controller="Home" class="btn btn-primary">Back</a>
+        <form asp-controller="Bucket" asp-action="AddToBucket" method="post">
+            <input type="hidden" name="productId" value="@Model.Id" />  
+            <button class="btn btn-primary" type="submit">Add To Bucket</button>
+        </form>
     </div>
     
 }
