--- a/MvcLearning/Views/Product/Details.cshtml
+++ b/MvcLearning/Views/Product/Details.cshtml
@@ -31,7 +31,8 @@ else
         }
             <a asp-action="Index" asp-controller="Home" class="btn btn-primary">Back</a>
         <form asp-controller="Bucket" asp-action="AddToBucket" method="post">
-            <input type="hidden" name="productId" value="@Model.Id" />  
+            <input type="hidden" name="productId" value="@Model.Id" />
+            <input type="number" name="quantity" value="1" min="1" />
             <button class="btn btn-primary" type="submit">Add To Bucket</button>
         </form>
     </div>
