--- a/MvcLearning/Views/Order/Details.cshtml
+++ b/MvcLearning/Views/Order/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model OrderDetailsDTO
+﻿@using System.Security.Claims
+@model OrderDetailsDTO
 @{
     ViewData["Title"] = "Order Details";
 }
@@ -49,5 +50,13 @@ else
 }
 
 <hr />
-
-<a asp-action="Index" asp-controller="Home" class="btn btn-primary">Back to Home</a>
+@if (User.IsInRole("ShopOwner"))
+{
+    <a asp-action="Orders" asp-controller="Shop" class="btn btn-primary">Back to Orders</a>
+}
+else
+{
+    var userRoles = User.Claims.Where(c => c.Type == ClaimTypes.Role).Select(c => c.Value).ToList();
+    var a = 15;
+    <a asp-action="Index" asp-controller="Home" class="btn btn-primary">Back to Home</a>
+}
