--- a/MvcLearning/Views/Shared/_Layout.cshtml
+++ b/MvcLearning/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                     }
                     else
                     {
+                        <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Bucket" asp-action="Index">Bucket</a>
+							</li>
                             <li class="nav-item">
                                 <p class="text-black">@User.Identity.Name</p>
                             </li>
