--- a/MvcLearning/Views/Product/Details.cshtml
+++ b/MvcLearning/Views/Product/Details.cshtml
@@ -16,14 +16,14 @@ else
         <h3>@Model.Name</h3>
         <p><strong>Description:</strong> @Model.Description</p>
         <p><strong>Price:</strong> @Model.Price.ToString("C")</p>
-        <p><strong>Shop:</strong> @Model.Shop?.Name</p>
+        <p><strong>Shop:</strong> <a asp-action="Index" asp-controller="Shop" asp-route-shopId="@Model.ShopId"  >@Model.Shop?.Name</a></p>
         @if (User.Identity?.IsAuthenticated == true &&
        User.IsInRole("ShopOwner") &&
        Model.Shop != null &&
        Model.Shop.Owner != null &&
        Model.Shop.Owner.UserName == User.Identity.Name)
         {
-            <a asp-action="Edit" asp-controller="Products" asp-route-id="@Model.Id" class="btn btn-success">Edit Product</a>
+            <a asp-action="Edit" asp-controller="Product" asp-route-productId="@Model.Id" class="btn btn-success">Edit Product</a>
             <form asp-action="Delete" asp-route-productId="@Model.Id" method="post">
 
                 <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this product?')">Delete</button>
