--- a/MvcLearning/Views/Product/Edit.cshtml
+++ b/MvcLearning/Views/Product/Edit.cshtml
@@ -1,29 +1,31 @@
 ﻿@using MvcLearning.Business.Models.Product
-
 @model ProductModel
 
-<h1>Add Product</h1>
+<h1>Edit Product</h1>
 
-<form asp-action="Create" asp-route-shopId="@ViewData["ShopId"]" method="post">
+<form asp-action="Edit" asp-controller="Product" method="post">
+    @* ВАЖНО: скрытое поле с ID продукта *@
+    <input type="hidden" asp-for="Id" />
+
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Description"></label>
         <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" type="number" step="0.01" />
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Add Product</button>
-</form>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+</form>
