--- a/MvcLearning/Views/Order/Details.cshtml
+++ b/MvcLearning/Views/Order/Details.cshtml
@@ -4,8 +4,22 @@
     ViewData["Title"] = "Order Details";
 }
 
+
+
 <h3>Order Details</h3>
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["SuccessMessage"]
+    </div>
+}
+else if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["ErrorMessage"]
+    </div>
+}
 <div>
     <h4>Order Information</h4>
     <p><strong>Order ID:</strong> @Model.Id</p>
