--- a/MvcLearning/Views/Bucket/Index.cshtml
+++ b/MvcLearning/Views/Bucket/Index.cshtml
@@ -41,7 +41,7 @@ else
 				if (product == null) continue;
 
 				<tr data-product-id="@product.Id">
-					<td>@product.Name</td>
+					<td><a asp-controller="Product" asp-action="Details" asp-route-productId="@product.Id">@product.Name</a></td>
 					<td>@product.Description</td>
 					<td>@product.Price.ToString("C")</td>
 					<td>
