--- a/MvcLearning/Views/Product/Create.cshtml
+++ b/MvcLearning/Views/Product/Create.cshtml
@@ -1,26 +1,35 @@
 ﻿@using MvcLearning.Business.Models.Product
-
 @model ProductModel
 
 <h1>Add Product</h1>
 
-<form asp-action="Create" asp-route-shopId="@ViewData["ShopId"]" method="post">
+<form asp-action="Create" asp-route-shopId="@ViewData["ShopId"]" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Description"></label>
         <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" type="number" step="0.01" />
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
+
+    <div class="form-group">
+        <label asp-for="UploadedImages">Изображения (до 5)</label>
+        <input asp-for="UploadedImages" class="form-control" type="file" multiple accept="image/*" />
+        <span asp-validation-for="UploadedImages" class="text-danger"></span>
+    </div>
+
     <button type="submit" class="btn btn-primary">Add Product</button>
 </form>
 
